Use List.of(for-only-one-arg) -- a list init perf optimization